feat-add-school-academy

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@
 }
 
 .exp-company-name,
-.education-sachool-name,
+.education-school-name,
 .awards-company-name {
   font-size: 25px;
   font-weight: bold;
